// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders basic button 1`] = `
<div>
  <div
    class="ax-button "
    data-size="default"
    data-style="default"
    data-theme="default"
  >
    <button
      class="ax-button__inner"
      data-icon-align="start"
      data-icon-hilight="false"
      data-no-label="false"
      type="button"
    >
      <div
        class="ax-button__label"
      >
        <span>
          Click Me!
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`Button renders block 1`] = `
<div>
  <div
    class="ax-button "
    data-block="true"
    data-size="default"
    data-style="default"
    data-theme="default"
  >
    <button
      class="ax-button__inner"
      data-icon-align="start"
      data-icon-hilight="false"
      data-no-label="false"
      type="button"
    >
      <div
        class="ax-button__label"
      >
        <span>
          Click Me!
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`Button renders color 1`] = `
<div>
  <div
    class="ax-button "
    data-size="default"
    data-style="default"
    data-theme="secondary"
  >
    <button
      class="ax-button__inner"
      data-icon-align="start"
      data-icon-hilight="false"
      data-no-label="false"
      type="button"
    >
      <div
        class="ax-button__label"
      >
        <span>
          Click Me!
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`Button renders disabled 1`] = `
<div>
  <div
    class="ax-button "
    data-disabled="true"
    data-size="default"
    data-style="default"
    data-theme="default"
  >
    <button
      class="ax-button__inner"
      data-icon-align="start"
      data-icon-hilight="false"
      data-no-label="false"
      type="button"
    >
      <div
        class="ax-icon ax-button__icon"
      >
        <i
          class="mdi mdi-bell"
        />
      </div>
      <div
        class="ax-button__label"
      >
        <span>
          Click Me!
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`Button renders icon align 1`] = `
<div>
  <div
    class="ax-button "
    data-size="default"
    data-style="default"
    data-theme="default"
  >
    <button
      class="ax-button__inner"
      data-icon-align="end"
      data-icon-hilight="false"
      data-no-label="false"
      type="button"
    >
      <div
        class="ax-icon ax-button__icon"
      >
        <i
          class="mdi mdi-bell"
        />
      </div>
      <div
        class="ax-button__label"
      >
        <span>
          Click Me!
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`Button renders icon hilight 1`] = `
<div>
  <div
    class="ax-button "
    data-size="default"
    data-style="default"
    data-theme="default"
  >
    <button
      class="ax-button__inner"
      data-icon-align="start"
      data-icon-hilight="true"
      data-no-label="false"
      type="button"
    >
      <div
        class="ax-icon ax-button__icon"
      >
        <i
          class="mdi mdi-bell"
        />
      </div>
      <div
        class="ax-button__label"
      >
        <span>
          Click Me!
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`Button renders link 1`] = `
<div>
  <div
    class="ax-button "
    data-size="default"
    data-style="default"
    data-theme="default"
  >
    <a
      class="ax-button__inner"
      data-icon-align="start"
      data-icon-hilight="false"
      data-no-label="false"
      href="/test"
    >
      <div
        class="ax-icon ax-button__icon"
      >
        <i
          class="mdi mdi-bell"
        />
      </div>
      <div
        class="ax-button__label"
      >
        <span>
          Click Me!
        </span>
      </div>
    </a>
  </div>
</div>
`;

exports[`Button renders new tab link 1`] = `
<div>
  <div
    class="ax-button "
    data-size="default"
    data-style="default"
    data-theme="default"
  >
    <a
      class="ax-button__inner"
      data-icon-align="start"
      data-icon-hilight="false"
      data-no-label="false"
      href="/test"
      target="_blank"
    >
      <div
        class="ax-icon ax-button__icon"
      >
        <i
          class="mdi mdi-bell"
        />
      </div>
      <div
        class="ax-button__label"
      >
        <span>
          Click Me!
        </span>
      </div>
    </a>
  </div>
</div>
`;

exports[`Button renders only icon 1`] = `
<div>
  <div
    class="ax-button "
    data-size="default"
    data-style="default"
    data-theme="default"
  >
    <button
      aria-label="Icon button"
      class="ax-button__inner"
      data-icon-align="start"
      data-icon-hilight="false"
      data-no-label="true"
      type="button"
    >
      <div
        class="ax-icon ax-button__icon"
      >
        <i
          class="mdi mdi-bell"
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`Button renders size 1`] = `
<div>
  <div
    class="ax-button "
    data-size="md"
    data-style="default"
    data-theme="default"
  >
    <button
      class="ax-button__inner"
      data-icon-align="start"
      data-icon-hilight="false"
      data-no-label="false"
      type="button"
    >
      <div
        class="ax-button__label"
      >
        <span>
          Click Me!
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`Button renders style 1`] = `
<div>
  <div
    class="ax-button "
    data-size="default"
    data-style="outline"
    data-theme="default"
  >
    <button
      class="ax-button__inner"
      data-icon-align="start"
      data-icon-hilight="false"
      data-no-label="false"
      type="button"
    >
      <div
        class="ax-button__label"
      >
        <span>
          Click Me!
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`Button renders with icon 1`] = `
<div>
  <div
    class="ax-button "
    data-size="default"
    data-style="default"
    data-theme="default"
  >
    <button
      class="ax-button__inner"
      data-icon-align="start"
      data-icon-hilight="false"
      data-no-label="false"
      type="button"
    >
      <div
        class="ax-icon ax-button__icon"
      >
        <i
          class="mdi mdi-bell"
        />
      </div>
      <div
        class="ax-button__label"
      >
        <span>
          Click Me!
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`Button renders with spinner 1`] = `
<div>
  <div
    class="ax-button "
    data-busy="true"
    data-size="default"
    data-style="default"
    data-theme="default"
  >
    <button
      class="ax-button__inner"
      data-icon-align="start"
      data-icon-hilight="false"
      data-no-label="false"
      type="button"
    >
      <div
        class="ax-icon ax-button__icon"
      >
        <i
          class="mdi mdi-bell"
        />
      </div>
      <div
        class="ax-icon ax-button__spinner ax-anim--spin"
      >
        <svg
          viewBox="0 0 24 24"
        >
          <path
            d="M16 0c-8.837 0-16 7.163-16 16s7.163 16 16 16 16-7.163 16-16-7.163-16-16-16zM16 8c4.418 0 8 3.582 8 8s-3.582 8-8 8-8-3.582-8-8 3.582-8 8-8zM25.546 25.546c-2.55 2.55-5.94 3.954-9.546 3.954s-6.996-1.404-9.546-3.954-3.954-5.94-3.954-9.546c0-3.606 1.404-6.996 3.954-9.546l2.121 2.121c0 0 0 0 0 0-4.094 4.094-4.094 10.755 0 14.849 1.983 1.983 4.62 3.075 7.425 3.075s5.441-1.092 7.425-3.075c4.094-4.094 4.094-10.755 0-14.849l2.121-2.121c2.55 2.55 3.954 5.94 3.954 9.546s-1.404 6.996-3.954 9.546z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="ax-button__label"
      >
        <span>
          Click Me!
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`Button renders with tooltip 1`] = `
<div>
  <div
    class="ax-button "
    data-size="default"
    data-style="default"
    data-theme="default"
  >
    <button
      class="ax-button__inner"
      data-icon-align="start"
      data-icon-hilight="false"
      data-no-label="false"
      type="button"
    >
      <div
        class="ax-button__label"
      >
        <span>
          Tooltip!
        </span>
      </div>
    </button>
  </div>
  <div
    class="ax-popper ax-root ax-tooltip ax-bg--darkest ax-color--empty "
    data-show="true"
    data-show-arrow="true"
    style="position: fixed; left: 0px; top: 0px; min-width: 0;"
  >
    <div
      class="ax-popper--body"
    >
      <span>
        This is a clickable button
      </span>
    </div>
    <div
      class="ax-popper--arrow"
      style="position: absolute;"
    />
  </div>
</div>
`;

exports[`Button renders with tooltip 2`] = `
<div>
  <div
    class="ax-button "
    data-size="default"
    data-style="default"
    data-theme="default"
  >
    <button
      class="ax-button__inner"
      data-icon-align="start"
      data-icon-hilight="false"
      data-no-label="false"
      type="button"
    >
      <div
        class="ax-button__label"
      >
        <span>
          Tooltip!
        </span>
      </div>
    </button>
  </div>
</div>
`;
